mini correction mobile

--- a/resources/css/app.less
+++ b/resources/css/app.less
@@ -147,7 +147,7 @@ img{
 
 @media only screen and (max-width: 980px) {
   #stageAccueil{
-      margin: auto;
+      margin-top: 6vh;
       width: 100%;
   }
 }
@@ -247,11 +247,28 @@ img{
   font-size: bold;
 }
 
+@media only screen and (max-width: 980px) {
+  .centered-title, .retour {
+    font-size: 2em;
+  }
+}
+
+
 .retour{
   position: absolute;
   bottom: 5%;
   right: 27%;
 }
+
+.a-propos{
+
+}
+@media only screen and (max-width: 980px) {
+  .a-propos, .contact-div {
+    font-size: 2em;
+  }
+}
+
 
 @media only screen and (max-width: 980px) {
 
@@ -280,6 +297,5 @@ img{
   .home-main-element {
     height: 30vh;
   }
-
 
 }
